# auto-econ-sentiment

./: .gitignore  CHANGELOG.md  LICENSE  README.md  params.yaml  pyproject.toml
.github/workflows/: ci.yml  publish.yml  release.yml
data/raw/: monetary_policy_statement.parquet.gzip  monetary_policy_statement_mostrecent.csv
docs/: ROADMAP.md  architecture.md
notebooks/: autoecon.ipynb  autoecon_demo.ipynb  demo_cb_speechs.ipynb  sanity_pipeline.ipynb
references/dictionaries/: ISO3_TO_ISO2.py
src/auto_econ_sentiment/: __init__.py  exceptions.py  pipeline.py
src/auto_econ_sentiment/clean/: __init__.py  text_clean.py  text_loader.py  text_viz.py
src/auto_econ_sentiment/clean/references/: british_2_american.py
src/auto_econ_sentiment/data/: lexical_master_dict.xlsx  lexical_master_dict.yaml
src/auto_econ_sentiment/models/: __init__.py  sentiment_base.py  sentiment_lexical.py
src/auto_econ_sentiment/utils/: __init__.py  load_yaml.py  paths.py
src/data/: cb_speeches_clean.py  cb_speeches_download.py  download_cb_speeches.py  run_cb_speeches.py
tests/: test_pipeline.py
tests/fixtures/synthetic_input/: test_onerow_onestatement.csv
